--- a/MisplaceAI/authentication/templates/authentication/register.html
+++ b/MisplaceAI/authentication/templates/authentication/register.html
@@ -15,16 +15,16 @@
                         {% csrf_token %}
                         {% if form.errors %}
                         <div class="alert alert-danger">
-                            <ul>
+                            <div>
                                 {% for field in form %}
                                 {% for error in field.errors %}
-                                <li>{{ error }}</li>
+                                <p>{{ error }}</p>
                                 {% endfor %}
                                 {% endfor %}
                                 {% for error in form.non_field_errors %}
-                                <li>{{ error }}</li>
+                                <p>{{ error }}</p>
                                 {% endfor %}
-                            </ul>
+                            </div>
                         </div>
                         {% endif %}
                         <div class="form-group">
@@ -68,7 +68,8 @@
                             <small id="passwordMatchMessage" class="form-text text-muted"></small>
                         </div>
                         <div class="form-group text-center">
-                            <button type="submit" class="btn btn-primary btn-block">Register</button>
+                            <button type="submit" class="btn btn-primary btn-block" id="registerButton"
+                                disabled>Register</button>
                         </div>
                     </form>
                 </div>
