--- a/MisplaceAI/core/templates/core/navbar.html
+++ b/MisplaceAI/core/templates/core/navbar.html
@@ -10,6 +10,11 @@
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             {% if user.is_authenticated %}
+            {% if user.is_staff %} {# Check if the user is a staff member (admin) #}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin_dashboard' %}">Admin Dashboard</a>
+            </li>
+            {% endif %}
             <li class="nav-item">
                 <form method="post" action="{% url 'logout' %}" class="form-inline">
                     {% csrf_token %}
