--- a/frontend/src/pages/NormalDetection/NormalDetectionPage.css
+++ b/frontend/src/pages/NormalDetection/NormalDetectionPage.css
@@ -1,9 +1,27 @@
 /* src/pages/NormalDetection/NormalDetectionPage.css */
-.container {
-    max-width: 600px;
+
+.card {
     margin: auto;
 }
 
-.btn-lg i {
-    margin-right: 8px;
+@media (max-width: 576px) {
+    .card-body {
+        padding: 1rem;
+    }
+
+    .btn-lg {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-body {
+        padding: 3rem;
+    }
+
+    .btn-lg {
+        font-size: 1.25rem;
+        padding: 0.75rem 1.5rem;
+    }
 }
