--- a/frontend/src/styles/_global.css
+++ b/frontend/src/styles/_global.css
@@ -1,46 +1,44 @@
 /* src/styles/_global.css */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
+/* Reset default margin and padding */
 body,
 html {
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
-}
-
-body {
-    font-family: var(--font-family-base), -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    line-height: 1.6;
-    background-color: var(--light-color);
-    color: var(--dark-color);
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+/* General container styles */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
 }
 
-/* Navbar specific styles */
-.navbar .navbar-collapse {
-    justify-content: flex-end;
+/* Utility classes */
+.text-center {
+    text-align: center;
 }
 
-.nav-link {
-    color: #333 !important;
-    margin-left: 1rem;
+.text-danger {
+    color: #dc3545;
+    text-align: center;
+    margin-top: 1rem;
 }
 
-.nav-link.btn {
-    cursor: pointer;
-    border: none;
-    background: none;
-    padding: 0;
-    margin: 0;
+
+.pages-container-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    /* Align items from top to bottom */
+    padding-top: 2rem;
+    /* Adjust padding as needed */
+    min-height: 100vh;
+    /* Ensure it takes the full viewport height */
 }
