--- a/frontend/src/styles/_global.css
+++ b/frontend/src/styles/_global.css
@@ -7,7 +7,7 @@ html {
     padding: 0;
     height: 100%;
     width: 100%;
-    font-family: Arial, sans-serif;
+    font-family: var(--font-family-base);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -25,20 +25,7 @@ html {
 }
 
 .text-danger {
-    color: #dc3545;
+    color: var(--danger-color);
     text-align: center;
     margin-top: 1rem;
-}
-
-
-.pages-container-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    /* Align items from top to bottom */
-    padding-top: 2rem;
-    /* Adjust padding as needed */
-    min-height: 100vh;
-    /* Ensure it takes the full viewport height */
 }
