--- a/frontend/src/styles/_responsive.css
+++ b/frontend/src/styles/_responsive.css
@@ -1,92 +1,87 @@
 /* src/styles/_responsive.css */
 
-/* General responsive styles */
-@media (max-width: 768px) {
-    .auth-container {
-        padding: 10px;
+@media (min-width: 100px) {
+    .pages-container-center {
+        width: 95%;
     }
 
     .auth-form {
-        padding: 20px;
+        width: 95%;
     }
 
+    .card-wide {
+        width: 95%;
+    }
+}
+
+
+
+@media (min-width: 600px) {
     .pages-container-center {
-        padding: 10px;
+        width: 90%;
     }
 
-    .dashboard-title {
-        font-size: 2rem;
+    .auth-form {
+        width: 70%;
     }
 
     .card-wide {
         width: 90%;
     }
-
-    .checkbox-container {
-        max-height: 200px;
-        overflow-y: auto;
-    }
-
-    .checkbox-wrapper-12 {
-        flex: 1 1 100%;
-    }
 }
 
-@media (min-width: 769px) and (max-width: 1199px) {
-    .card-wide {
+
+
+@media (min-width: 768px) {
+    .pages-container-center {
         width: 80%;
     }
 
-    .checkbox-container {
-        max-height: 300px;
-        overflow-y: auto;
-    }
-
-    .checkbox-wrapper-12 {
-        flex: 1 1 48%;
-    }
-}
-
-@media (min-width: 1200px) {
-    .card-body {
-        padding: 3rem;
-    }
-
-    .btn-lg {
-        font-size: 1.25rem;
-        padding: 0.75rem 1.5rem;
+    .auth-form {
+        width: 68%;
     }
 
     .card-wide {
-        width: 60%;
-        max-width: 900px;
-    }
-
-    .checkbox-container {
-        max-height: 400px;
-        overflow-y: auto;
-    }
-
-    .checkbox-wrapper-12 {
-        flex: 1 1 30%;
-    }
-}
-
-/* Specific adjustments for the form container */
-.form-container {
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-@media (max-width: 768px) {
-    .form-container {
-        max-width: 100%;
+        width: 80%;
     }
 }
 
 @media (min-width: 1200px) {
-    .form-container {
-        max-width: 800px;
+    .pages-container-center {
+        width: 65%;
+    }
+
+    .auth-form {
+        width: 60%;
+    }
+
+    .card-wide {
+        width: 70%;
+    }
+}
+
+@media (min-width: 1600px) {
+    .pages-container-center {
+        width: 60%;
+    }
+
+    .auth-form {
+        width: 50%;
+    }
+
+}
+
+
+
+
+@media (min-width: 2000px) {
+    .pages-container-center {
+        width: 55%;
+    }
+}
+
+@media (min-width: 2500px) {
+    .pages-container-center {
+        width: 50%;
     }
 }
