--- a/frontend/src/styles/input/NumberInput.css
+++ b/frontend/src/styles/input/NumberInput.css
@@ -1,10 +1,11 @@
+/* src/styles/input/NumberInput.css */
 /* NumberInput.css */
 
 .number-input-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px 0;
+    margin-bottom: 30px;
     font-family: 'Arial', sans-serif;
     width: 100%;
     max-width: 300px;
